tests/ui/attributes/export/exportable.binary.stderr
error: the `export_stable` attribute cannot be used on traits
  --> $DIR/exportable.rs:135:7
   |
LL |     #[export_stable]
   |       ^^^^^^^^^^^^^
   |
   = help: the `export_stable` attribute can be applied to associated types, data types, functions, inherent impl blocks, modules, type aliases, and use statements

error: the `export_stable` attribute cannot be used on constants
  --> $DIR/exportable.rs:139:7
   |
LL |     #[export_stable]
   |       ^^^^^^^^^^^^^
   |
   = help: the `export_stable` attribute can be applied to associated types, data types, functions, inherent impl blocks, modules, type aliases, and use statements

error: aborting due to 2 previous errors

